<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardCornerRadius="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_200"
        android:padding="8dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/photo_with_car"
            android:src="@drawable/ic_baseline_directions_car_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/firstGuidLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/modelTV" />

        <TextView
            android:id="@+id/modelTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/model"
            app:layout_constraintEnd_toStartOf="@+id/firstGuidLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/year"
            app:layout_constraintBottom_toTopOf="@+id/horizontalGuidLine"
            app:layout_constraintEnd_toStartOf="@+id/secondGuidLine"
            app:layout_constraintStart_toStartOf="@+id/firstGuidLine"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/yearTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/year"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/secondGuidLine"
            app:layout_constraintStart_toStartOf="@id/firstGuidLine"
            app:layout_constraintTop_toTopOf="@+id/horizontalGuidLine" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            app:layout_constraintBottom_toTopOf="@+id/horizontalGuidLine"
            app:layout_constraintEnd_toStartOf="@+id/thirdGuidLine"
            app:layout_constraintStart_toStartOf="@+id/secondGuidLine"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/priceTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/thirdGuidLine"
            app:layout_constraintStart_toStartOf="@+id/secondGuidLine"
            app:layout_constraintTop_toTopOf="@+id/horizontalGuidLine" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color"
            app:layout_constraintBottom_toTopOf="@+id/horizontalGuidLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/fourthGuidLine"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/colorTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/fourthGuidLine"
            app:layout_constraintTop_toTopOf="@+id/horizontalGuidLine" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mileage"
            app:layout_constraintBottom_toTopOf="@+id/horizontalGuidLine"
            app:layout_constraintEnd_toStartOf="@+id/fourthGuidLine"
            app:layout_constraintStart_toStartOf="@+id/thirdGuidLine"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/mileageTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mileage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/fourthGuidLine"
            app:layout_constraintStart_toStartOf="@+id/thirdGuidLine"
            app:layout_constraintTop_toTopOf="@+id/horizontalGuidLine" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/firstGuidLine"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/secondGuidLine"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/thirdGuidLine"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/fourthGuidLine"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontalGuidLine"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
